# appimage-cmake-example

./: CMakeLists.txt  Dockerfile  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h
.devcontainer/: devcontainer.json
appimage/: app.desktop
resources/: app.qrc
